<resources>
    <string name="app_name">OpenWeatherApp</string>
    <string name="city">city</string>
    <string name="dt">dt</string>
    <string name="_72_f">72 F</string>
    <string name="broken_clouds_75_clouds">Broken Clouds(75% clouds)</string>
    <string name="feels_like">Feels Like</string>
    <string name="wind_e_at_5mph">Wind:E at 5mph</string>
    <string name="humidity_51">Humidity: 51%</string>
    <string name="rain_last_hour_0_3_in">Rain last hour: 0.3 in</string>
    <string name="visibility_6_2_mi">Visibility: 6.2 mi</string>
    <string name="uv_index_2">UV Index: 2</string>
    <string name="_66_f">66°F</string>
    <string name="_8_am">8 am</string>
    <string name="_71_f">71°F</string>
    <string name="_68_f">68°F</string>
    <string name="_5_pm">5 pm</string>
    <string name="_11_pm">11 pm</string>
    <string name="_1_pm">1 pm</string>
    <string name="sunrise_6_46_am">Sunrise: 6:46 AM</string>
    <string name="sunset_6_34_pm">Sunset: 6:34 pm</string>
    <string name="toggle_units_menu">toggle_units_menu</string>
    <string name="daily_forecast_menu">daily_forecast_menu</string>
    <string name="change_location_menu">change_location_menu</string>
    <string name="overcast_clouds">Overcast Clouds</string>
    <string name="_76_f">76°F</string>
    <string name="today">Today</string>
    <string name="_2_00_pm">2:00 PM</string>
    <string name="dw_weather_icon">dw_weather_icon</string>
    <string name="_77_f_65_f">77°F / 65°F</string>
    <string name="monday_10_31">Monday, 10/31</string>
    <string name="broken_clouds">Broken Clouds</string>
    <string name="_0_precip">(0% precip.)</string>
    <string name="uv_index_4">UV index: 4</string>
    <string name="_65_f">65°F</string>
    <string name="_69_f">68°F</string>
    <string name="_77_f">77°F</string>
    <string name="_70_f">71°F</string>
    <string name="_8am">8am</string>
    <string name="_11am">11am</string>
    <string name="_5pm">5pm</string>
    <string name="_11pm">11pm</string>
</resources>