<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/dw_night_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_11pm"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dw_evening_time_tv"
        app:layout_constraintTop_toBottomOf="@+id/dw_night_temp_tv" />

    <TextView
        android:id="@+id/dw_evening_temp_tv"
        android:layout_width="61dp"
        android:layout_height="39dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="10dp"
        android:text="@string/_71_f"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dw_uvindex_tv" />

    <TextView
        android:id="@+id/dw_night_temp_tv"
        android:layout_width="61dp"
        android:layout_height="39dp"
        android:layout_marginStart="316dp"
        android:layout_marginTop="10dp"
        android:text="@string/_68_f"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dw_uvindex_tv" />

    <TextView
        android:id="@+id/dw_day_temp_tv"
        android:layout_width="61dp"
        android:layout_height="39dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="10dp"
        android:text="@string/_77_f"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dw_uvindex_tv" />

    <TextView
        android:id="@+id/dw_daydate_tv"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:background="#9558FF"
        android:text="@string/monday_10_31"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="36dp" />

    <TextView
        android:id="@+id/dw_minmax_temp_tv"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="325dp"
        android:text="@string/_77_f_65_f"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/dw_weather_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/broken_clouds"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dw_minmax_temp_tv" />

    <TextView
        android:id="@+id/dw_precip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_0_precip"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dw_weather_desc_tv" />

    <TextView
        android:id="@+id/dw_uvindex_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/uv_index_4"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dw_precip_tv" />

    <TextView
        android:id="@+id/dw_morning_temp_tv"
        android:layout_width="61dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/_65_f"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dw_uvindex_tv" />

    <TextView
        android:id="@+id/dw_morning_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_8am"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dw_morning_temp_tv" />

    <TextView
        android:id="@+id/dw_day_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_11am"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dw_morning_time_tv"
        app:layout_constraintTop_toBottomOf="@+id/dw_day_temp_tv" />

    <TextView
        android:id="@+id/dw_evening_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/_5pm"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dw_day_time_tv"
        app:layout_constraintTop_toBottomOf="@+id/dw_evening_temp_tv" />

    <ImageView
        android:id="@+id/dw_weather_icon_imv"
        android:layout_width="93dp"
        android:layout_height="90dp"
        android:contentDescription="@string/dw_weather_icon"
        app:layout_constraintBottom_toTopOf="@+id/dw_night_temp_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toEndOf="@+id/dw_minmax_temp_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        app:srcCompat="@drawable/_04d"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>