<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/hw_day_tv"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hw_time_tv"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/_2_00_pm"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw_day_tv" />

    <ImageView
        android:id="@+id/hw_weathericon_imv"
        android:layout_width="64dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/dw_weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw_time_tv"
        app:srcCompat="@drawable/_04d" />

    <TextView
        android:id="@+id/hw_temp_tv"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:text="@string/_76_f"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw_weathericon_imv" />

    <TextView
        android:id="@+id/hw_weather_desc_tv"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:text="@string/overcast_clouds"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw_temp_tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />
</androidx.constraintlayout.widget.ConstraintLayout>